// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Process heading > code-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
export const metadata = {
  title: 'codegen.yml'
}
export function useTOC(props) {
  return []
}
function MDXLayout(props) {
  const _components = {
    code: 'code',
    h1: 'h1',
    ...props.components
  }
  return (
    <_components.h1>
      <_components.code>{'codegen.yml'}</_components.code>
    </_components.h1>
  )
}
"
`;

exports[`Process heading > code-with-text-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
export const metadata = {
  title: 'codegen.yml file'
}
export function useTOC(props) {
  return []
}
function MDXLayout(props) {
  const _components = {
    code: 'code',
    h1: 'h1',
    ...props.components
  }
  return (
    <_components.h1>
      <_components.code>{'codegen.yml'}</_components.code>
      {' file'}
    </_components.h1>
  )
}
"
`;

exports[`Process heading > dynamic-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
export const metadata = {
  title: 'Posts Tagged with ""'
}
import { useRouter } from 'next/router'
export const TagName = () => {
  const { tag } = useRouter().query
  return tag || null
}
export function useTOC(props) {
  return []
}
function MDXLayout(props) {
  const _components = {
    h1: 'h1',
    ...props.components
  }
  return (
    <_components.h1>
      {'Posts Tagged with "'}
      <TagName />
      {'"'}
    </_components.h1>
  )
}
"
`;

exports[`Process heading > no-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
export const metadata = {}
export function useTOC(props) {
  return [
    {
      value: 'H2',
      id: 'h2',
      depth: 2
    }
  ]
}
function MDXLayout(props) {
  const { toc = useTOC(props) } = props
  const _components = {
    h2: 'h2',
    ...props.components
  }
  return <_components.h2 id={toc[0].id}>{toc[0].value}</_components.h2>
}
"
`;

exports[`Process heading > static-h1 1`] = `
"/*@jsxRuntime automatic*/
/*@jsxImportSource react*/
export const metadata = {
  title: 'Hello World'
}
export function useTOC(props) {
  return []
}
function MDXLayout(props) {
  const _components = {
    h1: 'h1',
    ...props.components
  }
  return <_components.h1>{'Hello World'}</_components.h1>
}
"
`;
